--- a/kernel/entryflags_x86_64/Cargo.toml
+++ b/kernel/entryflags_x86_64/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Kevin Boos <kevinaboos@gmail.com>", "Wenqiu Yu <yuwenqiuj@gmail.com>
 name = "entryflags_x86_64"
 description = "Defines the structure of page table entry flags on x86_64"
 version = "0.1.0"
-build = "../../build.rs"
+# build = "../../build.rs"
 
 [dependencies]
 static_assertions = "1.1.0"
