--- a/kernel/intel_ethernet/Cargo.toml
+++ b/kernel/intel_ethernet/Cargo.toml
@@ -3,18 +3,21 @@ name = "intel_ethernet"
 description = "defines structs and traits for DMA descriptors unique to Intel NICs"
 version = "0.1.0"
 authors = ["Ramla-I <ijazramla@gmail.com>"]
-build = "../../build.rs"
+# build = "../../build.rs"
 
 [dependencies]
 volatile = "0.2.7"
 bit_field = "0.7.0"
 zerocopy = "0.5.0"
 
-[dependencies.memory]
-path = "../memory"
+[dependencies.memory_model]
+path = "../memory_model"
 
-[dependencies.log]
-version = "0.4.8"
+[dependencies.verification_specs]
+path = "../verification_specs"
+
+# [dependencies.log]
+# version = "0.4.8"
 
 
 [lib]
