--- a/kernel/memory/Cargo.toml
+++ b/kernel/memory/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Kevin Boos <kevinaboos@gmail.com>"]
 name = "memory"
 description = "The virtual memory subsystem."
 version = "0.1.0"
-build = "../../build.rs"
+# build = "../../build.rs"
 
 [dependencies]
 spin = "0.9.0"
