--- a/kernel/nic_queues/Cargo.toml
+++ b/kernel/nic_queues/Cargo.toml
@@ -3,17 +3,17 @@ name = "nic_queues"
 description = "Defines structs that hold all information related to nic receive and transmit queues"
 version = "0.1.0"
 authors = ["Ramla-I <ijazramla@gmail.com>"]
-build = "../../build.rs"
+# build = "../../build.rs"
 
 [dependencies]
 owning_ref = { git = "https://github.com/theseus-os/owning-ref-rs" }
 mpmc = "0.1.6"
 
-[dependencies.memory]
-path = "../memory"
+[dependencies.memory_model]
+path = "../memory_model"
 
-[dependencies.log]
-version = "0.4.8"
+# [dependencies.log]
+# version = "0.4.8"
 
 [dependencies.intel_ethernet]
 path = "../intel_ethernet"
