--- a/kernel/device_manager/Cargo.toml
+++ b/kernel/device_manager/Cargo.toml
@@ -61,8 +61,8 @@ path = "../network_manager"
 [dependencies.ethernet_smoltcp_device]
 path = "../ethernet_smoltcp_device"
 
-[dependencies.ixgbe]
-path = "../ixgbe"
+[dependencies.ixgbe_intralingual]
+path = "../ixgbe_intralingual"
 
 [dependencies.io]
 path = "../io"
