--- a/kernel/ixgbe/Cargo.toml
+++ b/kernel/ixgbe/Cargo.toml
@@ -85,6 +85,9 @@ path = "../physical_nic"
 [dependencies.virtual_nic]
 path = "../virtual_nic"
 
+[dependencies.RingBuffer]
+path = "../RingBuffer"
+
 [lib]
 crate-type = ["rlib"] # "lib" does the same thing I think
 
